Another z-index fix

--- a/frontend/app/assets/stylesheets/application.scss
+++ b/frontend/app/assets/stylesheets/application.scss
@@ -173,12 +173,15 @@ form.search {
   @media(min-width: 544px) {
     &:hover .melded {
       transform: translate(100%) rotateY(180deg);
+      z-index: 1;
     }
     &:hover .meld0 {
       transform: translate(100%) rotateY(360deg);
+      z-index: 1;
     }
     &:hover .meld1 {
       transform: rotateY(360deg);
+      z-index: 1;
     }
   }
 }
